--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <a href=""></a>
     <a href=""></a>
 </nav>
+<footer>
+    <div>&copy us 2018</div>
+    <div>read more</div>
+    <div>contact us</div>
+</footer>
 </body>
 </html>
