--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </nav>
 <footer>
     <div>&copy us 2018</div>
-    <div>read more</div>
+    <div><ul>
+        <li>google</li>
+        <li>instagram</li>
+        <li>facebook</li>
+    </ul></div>
     <div>contact us</div>
 </footer>
 </body>
